--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 
 body{
     background-color: #FBFCFF;
-    font-family: 'Avenir Next', Arial, Helvetica, sans-serif;
+    font-family: 'Avenir Next', sans-serif;
     font-weight: 500;
     font-style: normal;
 }
